<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray"
    tools:context=".MainActivity">


    <TextView
        android:layout_margin="4dp"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Titletext"
        android:text="@string/title"
        />
    <TextView
        android:layout_margin="4dp"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Messagetext"
        android:id="@+id/message"
        android:text="@string/message"
        />


    <Button

        android:background="@drawable/buttons_style"
        android:text="@string/btn_change_language"
        android:textColor="@color/white"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/button_change_language"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:textColor="@color/white"
        android:background="@drawable/buttons_style"
        android:text="@string/btn_toast"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/button_toast"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <Button
        android:text="@string/regex"
        android:textColor="@color/white"
        android:background="@drawable/buttons_style"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/button_fizzbuzz"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>